# Lapis-API

./: README.md  pyproject.toml  server.py  server_types.py
api/search/: path.py  route.py
src/lapis/: __init__.py  lapis.py  server_types.py
src/lapis/protocals/: http1.py
src/lapis/protocols/: http1.py  websocket.py
tests/basic_load_test/api/: path.py
tests/basic_load_test/api/other/: path.py
tests/server_config_test/: test.py
tests/server_config_test/other/api/: path.py
tests/slugs_test/: test.py
tests/slugs_test/api/[slug1]/: path.py
tests/slugs_test/api/[slug1]/other/[slug2]/: path.py
tests/test-env/: pyvenv.cfg
tests/test-env/Scripts/: activate  activate.bat
tests/websocket_test/: test.py
tests/websocket_test/api/: path.py
