[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Lapis"
version = "0.1.5"
description = "An organized way to create REST APIs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Chandler Van" },
]

license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/CQVan/Lapis"
Issues = "https://github.com/CQVan/Lapis/issues"